--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,33 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="wrapper">
+  <nav class="navbar navbar-light bg-faded">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <ul class="nav navbar-nav">
+    <li class="nav-item active">
+      <a class="nav-link" href="#"><%= current_user.name %> <span class="sr-only">(current)</span></a>
+    </li>
+  </ul>
+</nav>
+  <!-- <div class="wrapper">
+    <div class="container">
+      <div class="navbar navbar-light navbar-fixed-top" style="background-color: #e3f2fd;">
+        <ul class="nav navbar-nav">
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= current_user.name %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Log Out", destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" } %>
+          </li>
+        </ul>
+        <% else %>
+          <%= link_to "Log In", new_user_session_path %> |
+          <%= link_to "Sign Up", new_user_registration_path %>
+        <% end %>
+      </div>
+    </div> -->
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
