--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,22 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
+
+.username {
+  font-size: 30px;
+  margin-right: 15px;
+}
+
+.time_create {
+  font-style: italic;
+  font-size: 10px;
+  color: rgb(103, 93, 102);
+}
+
+.icon {
+  width: 50px;
+  height: 50px;
+}
