--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,36 +7,37 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav class="navbar navbar-light bg-faded">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <ul class="nav navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="#"><%= current_user.name %> <span class="sr-only">(current)</span></a>
-    </li>
-  </ul>
-</nav>
-  <!-- <div class="wrapper">
-    <div class="container">
-      <div class="navbar navbar-light navbar-fixed-top" style="background-color: #e3f2fd;">
-        <ul class="nav navbar-nav">
-        <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= current_user.name %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Log Out", destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" } %>
-          </li>
-        </ul>
-        <% else %>
-          <%= link_to "Log In", new_user_session_path %> |
-          <%= link_to "Sign Up", new_user_registration_path %>
-        <% end %>
+  <div class="wrapper">
+    <!-- navbar -->
+    <nav class="navbar navbar-light bg-faded">
+      <a class="navbar-brand" href="/">LOGO</a>
+      <% if user_signed_in? %>
+      <ul class="nav navbar-nav" style="float:right">
+        <li class="nav-item active">
+            <a class="nav-link" href="/users/edit"><%= current_user.name %> <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a data-confirm="Bye!?" rel="nofollow" data-method="delete" href="/users/sign_out">LogOut</a>
+        </li>
+      </ul>
+      <% else %>
+      <ul class="nav navbar-nav" style="float:right">
+        <li class="nav-item active">
+            <a class="nav-link" href="/users/sign_in">SugnIn</a>
+        </li>
+        <li class="nav-item">
+            <a href="/users/sign_up" class="nav-link">SignUp</a>
+        </li>
+      </ul>
+      <% end %>
+    </nav>
+    <!-- end -->
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <div class="col-md-10 col-md-offset-1">
+        <%= yield %>
       </div>
-    </div> -->
-
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+    </div>
   </div>
 </body>
 </html>
