--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -27,7 +27,8 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class: "btn btn-default" %>
+    <%= link_to "Cancel", root_path , class: "btn btn-default"%>
   </div>
 <% end %>
 
