fix form with wrong route path

--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -1,10 +1,4 @@
 <h1>Add New Store</h1>
 
 <%= render 'form' %>
-  <!-- <div id="twzipcode"></div>
-
-<script type="text/javascript">
-$('#twzipcode').twzipcode({
-
-});
-</script> -->
+<%= link_to 'Cancel', root_path, class: "btn btn-default" %>
