store view and root page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require 'masonry/transitions'
  *= require_tree .
  *= require_self
  */
@@ -34,4 +35,39 @@
 .icon {
   width: 50px;
   height: 50px;
+}
+
+#stores {
+  margin: 0 auto;
+  width: 100%;
+  .box {
+    margin: 10px;
+    width: 350px;
+    box-shadow: 0 1px 2px 0 rgba(0 ,  0 , 0 , 0.22);
+    border-radius: 7px;
+    text-align: center;
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+    h2 {
+      font-size: 22px;
+      margin: 0;
+      padding: 25px 10px;
+      a {
+        color: #474747;
+      }
+    }
+  }
+}
+
+.data {
+  width: 7.5%;
+  // display: block;
+  padding: .75rem 0;
+  // border-bottom: 1px solid #e9e9e9;
+  // text-decoration: none;
+  text-align: center;
+  color: #969696;
+  margin: 0;
 }
