--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -2,3 +2,6 @@
 
 <%= render 'form' %>
 <%= link_to 'Cancel', root_path, class: "btn btn-default" %>
+
+<div id="twzipcode"></div>
+<button type="button" name="button" id="btn">alert</button>
